--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     position: fixed;
     bottom: 0;
     right: 0;
-    style: "color: white;"
   }
   </style>
   <body>
@@ -34,7 +33,8 @@
       <span class= "num" onclick="document.calc.txt.value +='.'">.</span>
       <span class= "num equal" onclick="document.calc.txt.value = eval(calc.txt.value)">=</span>
     </form>
-    <div id="foo">Special Thanks to <a href = "https://www.youtube.com/channel/UCbwXnUipZsLfUckBPsC7Jog">Online Tutorials</a> on YouTube</div>
+    <h3 style="color:white;">Special Thanks to <a href = "https://www.youtube.com/channel/UCbwXnUipZsLfUckBPsC7Jog">Online Tutorials</a> on YouTube</h3>
+    <h3><div id="foo">Special Thanks to <a href = "https://www.youtube.com/channel/UCbwXnUipZsLfUckBPsC7Jog">Online Tutorials</a> on YouTube</div></h3>
   </body>
 </html>
         
