--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@
       <span class= "num" onclick="document.calc.txt.value +='.'">.</span>
       <span class= "num equal" onclick="document.calc.txt.value = eval(calc.txt.value)">=</span>
     </form>
-    <h3 style="color:white;">Special Thanks to <a href = "https://www.youtube.com/channel/UCbwXnUipZsLfUckBPsC7Jog">Online Tutorials</a> on YouTube</h3>
-    <h3><div id="foo">Special Thanks to <a href = "https://www.youtube.com/channel/UCbwXnUipZsLfUckBPsC7Jog">Online Tutorials</a> on YouTube</div></h3>
+    <h3 style="color:white;"><div id="foo">Special Thanks to <a href = "https://www.youtube.com/channel/UCbwXnUipZsLfUckBPsC7Jog">Online Tutorials</a> on YouTube</div></h3>
   </body>
 </html>
         
